# Parvane

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
client/: README.md  check_jsx.mjs  index.html  package.json  render_check.mjs  stage-frontend.mjs
client/src/: app.jsx  atoms.jsx  data.jsx  live.jsx  shell.jsx  store.jsx  styles-screens.css  styles.css
client/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/screens/: calendar.jsx  cloud.jsx  diary.jsx  home.jsx  messenger.jsx  notes.jsx  system.jsx  workspace.jsx
client/uxcheck/: harness.html  mock-backend.js  run.mjs
desktop/: .gitignore  ARCHITECTURE-parvane.md  BUILD-parvane.md  PHASE3-progress.md  UPSTREAM  verify_phase3b.sh  verify_phase3c.sh  verify_phase3d.sh  verify_two_instances.sh
desktop/parvane-core/: CMakeLists.txt
desktop/parvane-core/include/parvane/: events.h  messenger.h  messenger_client.h  topics.h  transport.h
desktop/parvane-core/probe/: main.cpp
desktop/parvane-core/src/: messenger_client.cpp  transport.cpp
desktop/parvane-core/tests/: messenger_tests.cpp  transport_tests.cpp
desktop/tdesktop/: CMakeLists.txt
desktop/tdesktop/Telegram/: CMakeLists.txt
desktop/tdesktop/Telegram/SourceFiles/: apiwrap.cpp
desktop/tdesktop/Telegram/SourceFiles/core/: application.cpp
desktop/tdesktop/Telegram/SourceFiles/intro/: intro_parvane.cpp  intro_parvane.h  intro_widget.cpp
desktop/tdesktop/Telegram/SourceFiles/main/: main_session.cpp
desktop/tdesktop/Telegram/SourceFiles/parvane/: parvane_client.cpp  parvane_client.h
desktop/tdesktop/Telegram/lib_webrtc/: CMakeLists.txt
desktop/tdesktop/Telegram/lib_webrtc/webrtc/: webrtc_create_adm.cpp  webrtc_system_audio_capture.cpp
desktop/tdesktop/Telegram/lib_webrtc/webrtc/platform/mac/: webrtc_environment_mac.mm  webrtc_loopback_adm_mac.h  webrtc_loopback_adm_mac.mm  webrtc_system_audio_capture_mac.h  webrtc_system_audio_capture_mac.mm
infra/nats/: server.conf
scripts/: e2e_smoke.py  run_all_tests.sh
shards/calendar/: Cargo.toml
shards/calendar/migrations/: 0001_init.sql
shards/calendar/src/: lww.rs  main.rs
shards/call/: Cargo.toml
shards/call/migrations/: 0001_init.sql
shards/call/src/: calls.rs  main.rs
shards/cloud/: Cargo.toml
shards/cloud/migrations/: 0001_init.sql
shards/cloud/src/: main.rs
shards/identity/: Cargo.toml
shards/identity/migrations/: 0001_init.sql
shards/identity/src/: main.rs
shards/messenger/: Cargo.toml
shards/messenger/migrations/: 0001_init.sql  0002_read_receipts.sql  0003_message_content.sql  0004_message_mutations.sql
shards/messenger/src/: main.rs
shards/notes/: Cargo.toml
shards/notes/migrations/: 0001_init.sql  0002_body.sql
shards/notes/src/: main.rs  rga.rs
shared/parvane-types/: Cargo.toml
shared/parvane-types/src/: lib.rs
