# Standalone workspace — keep this Tauri crate out of the root Rust shard workspace.
[workspace]

[package]
name = "monolith-client"
version = "0.1.0"
edition = "2021"
description = "MONOLITH operator console — desktop shell"

[lib]
name = "monolith_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
